# url-shortener

./: .env.deploy.example  .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
alembic/: env.py
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.test.yml  docker-compose.yml
src/: main.py
src/app/: router.py
src/app/crud/: short_url_crud.py  stats_crud.py  url_crud.py
src/app/handler/: stats.py  url.py
src/app/model/: short_urls.py  urls.py  visits.py
src/app/schema/: stats.py  url.py
src/app/service/: stats_service.py  url_service.py
src/common/: base_crud.py  base_model.py  stats.py
src/core/: application.py  config.py
src/core/database/: postgres_connector.py
tests/: test_stats_service.py  test_url_service.py
